--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.budgetapp.us.budget_app">
    <application
-        android:label="budget_app"
+        android:label="Budget App"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
